feat:  Added Tetst index view  Added qustion views  Created necessary helpers

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,26 @@
  *= require_tree .
  *= require_self
  */
+html, body {
+    height: 100%;
+    margin: 1px;
+    padding: 0;
+}
+body {
+    display: flex;
+    flex-direction: column;
+}
+main {
+    flex: 1 0 auto;
+    padding: 10px
+}
+footer, header {
+    display: flex;
+    flex-shrink: 0;
+    background-color: #45a1ff;
+    color: #fff;
+    padding: 20px;
+    flex-flow: row wrap;
+    justify-content: space-around;
+}
+
