fix: fixed bang destroy fixed parenthesis fixed new/edit views fixed question.rescue_with_question_not_found

--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,6 +1,4 @@
-<%= question_header(@question) %>
-
 <%= render 'form' %>
-
-<br/>
-<%= link_to 'Back to questions', test_path(@question.test) %>
+<div>
+  <%= link_to 'Back to questions', test_path(@question.test) %>
+</div>
