--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,3 +1,5 @@
+<%= question_header(@question) %>
+
 <%= form_with model: [@test, @question] do |form| %>
 <%= render 'shared/errors', resource: @question %>
 
@@ -11,3 +13,5 @@
   </div>
 
 <% end %>
+
+<br/>
