--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -1,8 +1,7 @@
-<%= question_header(@question) %>
 <%= render "form", question: @question %>
-
-<br/>
-
 <div>
-  <%= link_to "Back to questions", test_questions_path(@question.test) %>
+  <%= link_to "Back to questions", test_questions_path(@question.test) %> |
+  <%= link_to 'Delete', question_path(@question),
+              method: :delete,
+              data: { confirm: 'Are you sure?' } %>
 </div>
