--- a/app/views/tests/show.html.erb
+++ b/app/views/tests/show.html.erb
@@ -1,5 +1,4 @@
 <p style="color: green"><%= notice %></p>
-
 <h2><%= @test.title %> <small>Level: <%= @test.level %></small></h2>
 <p>
   <%= link_to "New question", new_test_question_path(@test)  %>
@@ -10,10 +9,9 @@
     <th>Question</th>
     <th>Actions</th>
   </tr>
-  <%= render @questions %>
+  <%= render @test.questions %>
 </table>
 <br/>
 <div>
   <%= link_to "Back to tests", tests_path %>
 </div>
-
