--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -4,7 +4,7 @@
   <%= @question.body %>
 </p>
 <p>
-  <%= link_to 'Back', test_questions_path(@question.test) %> |
+  <%= link_to 'Back', test_path(@question.test) %> |
   <%= link_to 'Edit', edit_question_path(@question) %> |
   <%= link_to 'Delete', question_path(@question),
               method: :delete,
