--- a/app/views/tests/_test.html.erb
+++ b/app/views/tests/_test.html.erb
@@ -3,7 +3,7 @@
     <td><%= test.title %></td>
     <td style="text-align: center;"><%= test.level %></td>
     <td style="text-align: center;"><%= test.questions.count %></td>
-    <td><%= link_to 'Questions', test_questions_path(test) %></td>
+    <td><%= link_to 'Show', test_path(test) %></td>
   </tr>
 <%# end %>
 
