--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,4 +1,5 @@
-<p style="color: red"><%= notice %></p>
+<p style="color: green"><%= notice %></p>
+<p style="color: red"><%= alert %></p>
 
 <h1>Tests list</h1>
 
