--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,4 +1,4 @@
 <%= render 'form' %>
 <div>
-  <%= link_to 'Back to questions', test_path(@question.test) %>
+  <%= link_to 'Back to questions', test_path(@test) %>
 </div>
