--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,3 +1,4 @@
+<p style="color: green"><%= notice %></p>
 <h2>Question</h2>
 <p>
   <strong>Body:</strong>
@@ -10,3 +11,10 @@
               method: :delete,
               data: { confirm: 'Are you sure?' } %>
 </p>
+<h3>Answers</h3>
+
+<%= link_to 'New answer', new_question_answer_path(@question) %>
+
+<ol>
+  <%= render @question.answers %>
+</ol>
