--- a/app/views/tests/_test.html.erb
+++ b/app/views/tests/_test.html.erb
@@ -4,6 +4,7 @@
     <td style="text-align: center;"><%= test.level %></td>
     <td style="text-align: center;"><%= test.questions.count %></td>
     <td><%= link_to 'Show', test_path(test) %></td>
+    <td><%= button_to 'Start', start_test_path(test) %></td>
   </tr>
 <%# end %>
 
