--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -8,11 +8,12 @@
     <th>Title</th>
     <th>Level</th>
     <th>Questions qty.</th>
-    <th>Actions</th>
+    <th colspan="2">Actions</th>
   </tr>
   <%= render @tests %>
 </table>
 <p>
   Total tests: <%= @tests.count %>
 </p>
+
 
