feat: added User session

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,3 +1,5 @@
 <header>
-
+  <% if logged_in? %>
+    <p class="nav user">Welcome, <b><%= current_user.email %></b> Guru</p>
+  <% end %>
 </header>
